# embodied-inference-prep

./: .gitignore  CMakeLists.txt  README.md  test_file.txt
docker/: .dockerignore  Dockerfile
docs/: README.md  l4_l5_on_device_ai_robotics_interview_questions.md  month0_core_systems.md  month1_litert.md  month2_resources.md  month4_compression.md  month5_robotic_orchestration.md
docs/curriculum/: architecture_studies.md  month0_core_systems.md  month1_litert.md  month2_resources.md  month3_compilers.md
docs/practice/: README.md  l4_l5_low_level_cpp_sample_answers.md
docs/warmup_cpp/: answers.md  hints.md  personal_answer.md  questions.md
scripts/: build.sh  configure.sh  docker_build.sh  docker_run.sh  docker_test.sh  fix_git_mount.sh  run_warmup.sh  test.sh
src/warmup_basic_cpp_drill/: q01_hello_cpp.cpp  q02_console_name_io.cpp  q03_is_even_bool.cpp  q04_increment_reference.cpp  q05_string_greeting.cpp  q06_file_io_print_lines.cpp  q07_counter_class.cpp  q08_stack_heap_new_delete.cpp  q09_point_constructor_overloading.cpp  q10_destructor_responsibility.cpp  q11_copy_constructor_int_owner.cpp  q12_add_function_overloading.cpp  q13_point_operator_plus.cpp  q14_friend_private_field.cpp  q15_shape_circle_inheritance.cpp  q16_virtual_destructor.cpp  q17_abstract_area_interface.cpp  q18_rectangle_area_override.cpp  q19_virtual_table.cpp  q20_multiple_inheritance_risk.cpp  q21_static_cast_example.cpp  q22_dynamic_cast_example.cpp  q23_inline_square.cpp  q24_static_member_counter.cpp  q25_throw_invalid_argument.cpp  q26_catch_exception.cpp  (+32 more)
tests/: CMakeLists.txt
(+285 files in other folders)
